--- a/app/views/pages/app.html.erb
+++ b/app/views/pages/app.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#app</h1>
-<p>Find me in app/views/pages/app.html.erb</p>
+<div class="container profile">
+  <div id="app">
+    <div id="user-data" data-user="<%= current_user.to_json %>"></div>
+  </div>
+</div>
