--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,131 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+.container.profile {
+  margin-top:50px;
+}
+.profile-heading {
+  margin: 20px 0;
+  padding-bottom: 30px;
+}
+.profile-heading .name {
+  @media(min-width: 1000px){
+    border-right: 1px solid #f1f1f1;
+  }
+  margin:-30px 0;
+  padding: 40px 30px 0 30px;
+}
+.profile-heading .followers, .profile-heading .following {
+  @media(min-width: 1000px){
+    border-right: 1px solid #f1f1f1;
+  }
+  margin:-30px 0;
+  padding: 60px 30px;
+}
+.profile-heading .likes {
+  margin:-30px 0;
+  padding: 60px 30px;
+}
+.profile-heading .stat-key {
+  font-size: 20px;
+  font-weight: 200;
+}
+.profile-heading .stat-val {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.profile-options {
+  background-color: #f1f1f1;
+  margin:-20px 0 20px 0;
+}
+.profile-options .link a {
+  padding:18px;
+  font-size: 18px;
+}
+.profile-options .link .icon {
+  font-size: 16px;
+  padding-top:2px;
+}
+.tagline {
+  padding: 10px 0 0;
+  font-size: 16px;
+  line-height: 1.4;
+}
+.avatar {
+  float: right;
+  border-radius: 100%;
+}
+.follow {
+  float: right;
+}
+.avatar img {
+  border-radius: 100%;
+}
+p.title.is-bold {
+  font-weight: bold;
+}
+.card .timestamp {
+  float:right;
+  color:#bbb;
+}
+
+// .control.has-addons .button, .control.has-addons .input, .control.has-addons .select, .control.has-addons .textarea{
+//   border-radius: 0;
+//   margin-right: -1px;
+//   width: auto;
+// }
+
+// .control.has-addons .button:first-child, .control.has-addons .button:first-child select, .control.has-addons .input:first-child, .control.has-addons .input:first-child select, .control.has-addons .select:first-child, .control.has-addons .select:first-child select, .control.has-addons .textarea:first-child, .control.has-addons .textarea:first-child select {
+//     border-radius: 3px 0 0 3px;
+// }
+
+// .control.has-addons .button:last-child, .control.has-addons .button:last-child select, .control.has-addons .input:last-child, .control.has-addons .input:last-child select, .control.has-addons .select:last-child, .control.has-addons .select:last-child select, .control.has-addons .textarea:last-child, .control.has-addons .textarea:last-child select {
+//     border-radius: 0 3px 3px 0;
+// }
+
+@media(min-width: 768px){
+  .level.is-tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .level.is-tablet .level-left,
+  .level.is-tablet .level-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .level.is-tablet .level-left + .level-right {
+    margin-top: 0;
+  }
+
+  .level.is-tablet .level-item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .level.is-tablet .level-item:not(.is-narrow) {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.dataTables_wrapper.dt-bulma{
+  width: 100%;
+  margin: 25px 15px;
+}
+.table{
+  margin: 25px 15px;
+  width: calc(100% - 30px) !important;
+}
+.dataTables_paginate.paging_simple_numbers{
+  float: right;
+}
+
+.panel{
+  border-radius: 3px;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
+  background-color: white;
+}
