--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,9 @@ CUSTOM
 */
 @import 'devise';
 @import 'pages';
-
+.columns{
+  margin: 0 !important;
+}
 .server-side.notification{
   margin-bottom: 0px !important;
   position: absolute;
