--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -12,10 +12,10 @@ SESSIONS - NEW
 
 .logo-wrapper{
   img{
-    margin-top: 175px;
+    /* margin-top: 100px; */
     max-width: 75%;
-    margin-left: -35px;
-    // float: right;
+    margin: 100px auto 0;
+    display: block;
   }
 }
 .sign-in-form{
