--- a/app/views/_layout_elements/_header.html.erb
+++ b/app/views/_layout_elements/_header.html.erb
@@ -1,16 +1,11 @@
-<nav class="nav has-shadow">
+<nav class="nav has-shadow main-navbar">
   <div class="container">
     <div class="nav-left">
       <a class="nav-item is-brand" href="/">
         <img src="<%= asset_path('promoloyola81_logo_hat_red.png') %>" alt="Promo 81">
       </a>
     </div>
-    <span id="nav-toggle" class="nav-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </span>
-    <div id="nav-menu" class="nav-right nav-menu">
+    <div id="nav-menu" class="nav-right">
       <div class="nav-item">
         <div class="field is-grouped">
           <p class="control">
