--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="columns">
+  <div class="column is-4 is-offset-4 logo-wrapper">
+    <%= logo_helper %>
   </div>
+</div>
+<div class="columns sign-in-form">
+  <div class="column is-4 is-offset-4">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <div class="field">
+        <%= f.label :email %>
+        <p class="control">
+          <%= f.email_field :email, autofocus: true, class: "input is-large" %>
+        </p>
+      </div>
+      <div class="actions">
+        <%= f.submit "Reset password", class: "button is-large is-pulled-right" %>
+      </div>
+    <% end %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= render "devise/shared/links" %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
