--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,23 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag    'application', media: 'all' %>
     <%= stylesheet_link_tag    'https://cdn.datatables.net/responsive/2.1.1/css/responsive.dataTables.min.css', media: 'all' %>
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= asset_path('apple-icon-57x57.png') %>">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= asset_path('apple-icon-60x60.png') %>">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= asset_path('apple-icon-72x72.png') %>">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= asset_path('apple-icon-76x76.png') %>">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= asset_path('apple-icon-114x114.png') %>">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= asset_path('apple-icon-120x120.png') %>">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= asset_path('apple-icon-144x144.png') %>">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= asset_path('apple-icon-152x152.png') %>">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= asset_path('apple-icon-180x180.png') %>">
+    <link rel="icon" type="image/png" sizes="192x192"  href="<%= asset_path('android-icon-192x192.png') %>">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= asset_path('favicon-32x32.png') %>">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= asset_path('favicon-96x96.png') %>">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= asset_path('favicon-16x16.png') %>">
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="<%= asset_path('ms-icon-144x144.png') %>">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <%= render '_layout_elements/header' %>
